Framework preparation in progress

--- a/src/test/resources/data.properties
+++ b/src/test/resources/data.properties
@@ -1,7 +1,7 @@
 #dev:
 #staging:
 #prod:
-url=https://ebay.com
+ebay_url=https://ebay.com
 orangehrm_url=https://awesomeqa.com/hr/web/index.php/auth/login
 avibra_url=https://admin-preprod.avibra.com/login
 
