Framework preparation in progress

--- a/src/test/resources/data.properties
+++ b/src/test/resources/data.properties
@@ -2,10 +2,10 @@
 #staging:
 #prod:
 ebay_url=https://ebay.com
-orangehrm_url=https://awesomeqa.com/hr/web/index.php/auth/login
+orangehrm_url=https://www.awesomeqa.com/hr/web/index.php/auth/login
 avibra_url=https://admin-preprod.avibra.com/login
 
 
 
 #chrome , firefox, ie
-browser=chrome
+
