Framework preparation in progress

--- a/src/test/resources/data.properties
+++ b/src/test/resources/data.properties
@@ -4,7 +4,8 @@
 ebay_url=https://ebay.com
 orangehrm_url=https://www.awesomeqa.com/hr/web/index.php/auth/login
 avibra_url=https://admin-preprod.avibra.com/login
-
+username=kumarsanjay2001us@gmail.com
+password=c0dpiI#8
 
 
 #chrome , firefox, ie
