Framework preparation in progress

--- a/src/test/resources/data.properties
+++ b/src/test/resources/data.properties
@@ -4,8 +4,10 @@
 ebay_url=https://ebay.com
 orangehrm_url=https://www.awesomeqa.com/hr/web/index.php/auth/login
 avibra_url=https://admin-preprod.avibra.com/login
-username=kumarsanjay2001us@gmail.com
-password=c0dpiI#8
+validusername=kumarsanjay2001us@gmail.com
+validpassword=c0dpiI#8
+invalidusername=kumarsanjay1232001us@gmail.com
+invalidpassword=pass123@
 
 
 #chrome , firefox, ie
